# quantum_brains_test_task

./: .gitignore  README.md  docker-compose.yml  env  pyproject.toml
files/: initial_balances.json
migrations/: env.py
migrations/versions/: 1057d272b03a_transaction.py  4142eaa58d4c_transaction.py  548f24e4d76d_initial.py  ab652a1eb17e_user.py  e5194eaa2626_user.py  e629d225aefa_user_requests.py
src/: config.py  conftest.py  database.py  main.py
src/bot/: bot.py
src/exchange/: enums.py
src/exchange/adapters/: exchange_api.py  rates_client.py
src/exchange/services/: exchange.py
src/exchange/tests/: test_exchange_service.py
src/transaction/: enums.py
src/transaction/adapters/: orm.py  repository.py
src/transaction/domain/: model.py
src/transaction/tests/: test_repository.py
src/user/adapters/: orm.py  repository.py
src/user/domain/: model.py
src/user/services/: report_service.py  user.py
src/user/tests/: test_adapters.py
